# robotics

UMA/UMA-master/: sarsa.py
tiago/zubik-palczuk-tiago/manipulation/: README.md  (+6 more)
tiago/zubik-palczuk-tiago/mobile/: CMakeLists.txt  correction_data.txt  klucz.txt  komendy.md
tiago/zubik-palczuk-tiago/mobile/lab2_pkg/navigation_pkg/: CMakeLists.txt  package.xml
tiago/zubik-palczuk-tiago/mobile/lab2_pkg/navigation_pkg/configs/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
tiago/zubik-palczuk-tiago/mobile/lab2_pkg/navigation_pkg/launch/: tiago_move.launch  tiago_move_hall.launch
tiago/zubik-palczuk-tiago/mobile/lab2_pkg/navigation_pkg/maps/: moja_mapa_korytarz.yaml
tiago/zubik-palczuk-tiago/mobile/launch/: navi_corridor.launch  navi_map.launch
tiago/zubik-palczuk-tiago/mobile/maps/: moja_mapa.yaml
tiago/zubik-palczuk-tiago/mobile/models/corridor/: model.sdf
tiago/zubik-palczuk-tiago/mobile/models/moj_model/: model.config  model.sdf
tiago/zubik-palczuk-tiago/mobile/navi_param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
tiago/zubik-palczuk-tiago/mobile/rviz/: simple.rviz
tiago/zubik-palczuk-tiago/mobile/scripts/: correction.py  kinematic.py  kinematic2.py  navi.cpp
tiago/zubik-palczuk-tiago/mobile/worlds/: corridor.world  moj_swiat.world
wr/wr_mojje-master/: README.md  anor1_launch.py  avoid_blocks.py  bug2.py  bug_2.py  dodat.py  follow_wall.py  gazebo_move.py  kk.py  motion.py  py_pub.py  py_pub2.py  py_publish.py
(+54 files in other folders)
